--- a/app.json
+++ b/app.json
@@ -18,13 +18,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.arleysouto.teste"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#000000"
-      }
+      },
+      "package": "com.arleysouto.teste"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -32,7 +34,9 @@
     "plugins": [
       [
         "onesignal-expo-plugin",
-        {"mode": "development"}
+        {
+          "mode": "development"
+        }
       ]
     ]
   }
